--- a/SeSACWeek3/Setting.storyboard
+++ b/SeSACWeek3/Setting.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +23,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mez-8S-c54" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4422.1374045801522" y="-723.23943661971839"/>
+            <point key="canvasLocation" x="4421" y="-1127"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="JQ2-Qh-l65">
@@ -183,7 +184,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GsS-5Q-rLS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5190.0763358778622" y="-724.64788732394368"/>
+            <point key="canvasLocation" x="5135" y="-1127"/>
         </scene>
         <!--설정-->
         <scene sceneID="3Uo-1K-6MY">
@@ -212,7 +213,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="emg-dE-vXE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4420.6106870229005" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="4421" y="-401"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="e86-lQ-DQL">
@@ -268,11 +269,137 @@
                     <connections>
                         <segue destination="zkp-yN-jiU" kind="show" identifier="toCase1" id="jMx-0E-ibq"/>
                         <segue destination="cbm-RQ-nUe" kind="show" identifier="toCase2" id="ZzI-e9-qBF"/>
+                        <segue destination="Oc2-M5-kwH" kind="show" identifier="toCase3" id="Vfh-4l-a0v"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PhP-lj-d6l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2437" y="-401"/>
+            <point key="canvasLocation" x="2882" y="-401"/>
+        </scene>
+        <!--쇼핑-->
+        <scene sceneID="ow1-8Q-ZHL">
+            <objects>
+                <viewController id="Oc2-M5-kwH" customClass="Case3ViewController" customModule="SeSACWeek3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fa2-EY-WDa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BoZ-Yi-biN">
+                                <rect key="frame" x="20" y="123" width="353" height="65"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="무엇을 구매하실건가요?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fsW-xF-qks">
+                                        <rect key="frame" x="10" y="20" width="273" height="25"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cln-XE-ycN">
+                                        <rect key="frame" x="293" y="17.666666666666657" width="50" height="30"/>
+                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="Jnd-fM-a8w"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="추가">
+                                            <color key="titleColor" systemColor="labelColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstItem="fsW-xF-qks" firstAttribute="top" secondItem="BoZ-Yi-biN" secondAttribute="top" constant="20" id="30l-3d-Vq8"/>
+                                    <constraint firstAttribute="height" constant="65" id="BMc-vt-1Gg"/>
+                                    <constraint firstAttribute="bottom" secondItem="fsW-xF-qks" secondAttribute="bottom" constant="20" id="EKQ-4F-rGP"/>
+                                    <constraint firstItem="cln-XE-ycN" firstAttribute="centerY" secondItem="BoZ-Yi-biN" secondAttribute="centerY" id="HAn-P8-O4a"/>
+                                    <constraint firstItem="fsW-xF-qks" firstAttribute="leading" secondItem="BoZ-Yi-biN" secondAttribute="leading" constant="10" id="JCo-iX-mCf"/>
+                                    <constraint firstAttribute="trailing" secondItem="cln-XE-ycN" secondAttribute="trailing" constant="10" id="euY-rv-8m2"/>
+                                    <constraint firstItem="cln-XE-ycN" firstAttribute="leading" secondItem="fsW-xF-qks" secondAttribute="trailing" constant="10" id="pHJ-cl-9fD"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2Bz-Kx-Ecv">
+                                <rect key="frame" x="20" y="188" width="353" height="610"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="case3Cell" id="AZH-Hk-xlU" customClass="Case3Cell" customModule="SeSACWeek3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="353" height="25.333333969116211"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AZH-Hk-xlU" id="HFn-MB-FBb">
+                                            <rect key="frame" x="0.0" y="0.0" width="353" height="25.333333969116211"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kq3-EX-v2e">
+                                                    <rect key="frame" x="10" y="0.0" width="333" height="25.333333333333332"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LUc-jN-nDK">
+                                                            <rect key="frame" x="0.0" y="0.33333333333333393" width="25" height="25"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="25" id="cVe-Ui-XvS"/>
+                                                                <constraint firstAttribute="width" constant="25" id="t4a-cS-a94"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O8z-b6-nB2">
+                                                            <rect key="frame" x="35" y="2.6666666666666661" width="263" height="20.333333333333336"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MCh-p6-ov0">
+                                                            <rect key="frame" x="308" y="0.33333333333333393" width="25" height="25"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="25" id="5En-Ol-MW2"/>
+                                                                <constraint firstAttribute="width" constant="25" id="uZk-bg-LYo"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="O8z-b6-nB2" firstAttribute="centerY" secondItem="kq3-EX-v2e" secondAttribute="centerY" id="PvJ-7m-YSQ"/>
+                                                        <constraint firstItem="MCh-p6-ov0" firstAttribute="centerY" secondItem="kq3-EX-v2e" secondAttribute="centerY" id="RwI-Pk-KA9"/>
+                                                        <constraint firstAttribute="trailing" secondItem="MCh-p6-ov0" secondAttribute="trailing" id="dzb-jC-VGi"/>
+                                                        <constraint firstItem="LUc-jN-nDK" firstAttribute="leading" secondItem="kq3-EX-v2e" secondAttribute="leading" id="j8p-vn-wsr"/>
+                                                        <constraint firstItem="LUc-jN-nDK" firstAttribute="centerY" secondItem="kq3-EX-v2e" secondAttribute="centerY" id="nIX-il-oJ2"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="kq3-EX-v2e" secondAttribute="bottom" id="7eR-Pl-4sd"/>
+                                                <constraint firstItem="kq3-EX-v2e" firstAttribute="top" secondItem="HFn-MB-FBb" secondAttribute="top" id="KIi-ao-3Zp"/>
+                                                <constraint firstAttribute="trailing" secondItem="kq3-EX-v2e" secondAttribute="trailing" constant="10" id="jl8-D8-cSq"/>
+                                                <constraint firstItem="kq3-EX-v2e" firstAttribute="leading" secondItem="HFn-MB-FBb" secondAttribute="leading" constant="10" id="yhn-lc-kxd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="leftImageView" destination="LUc-jN-nDK" id="hyr-ne-HbQ"/>
+                                            <outlet property="rightImageView" destination="MCh-p6-ov0" id="ZeT-Z1-Ged"/>
+                                            <outlet property="rowLabel" destination="O8z-b6-nB2" id="cVA-D2-JqJ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="WrE-x1-m2C"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WrE-x1-m2C" firstAttribute="trailing" secondItem="2Bz-Kx-Ecv" secondAttribute="trailing" constant="20" id="057-l8-SIG"/>
+                            <constraint firstItem="2Bz-Kx-Ecv" firstAttribute="leading" secondItem="WrE-x1-m2C" secondAttribute="leading" constant="20" id="21y-Y8-JoN"/>
+                            <constraint firstItem="WrE-x1-m2C" firstAttribute="trailing" secondItem="BoZ-Yi-biN" secondAttribute="trailing" constant="20" id="7zR-9i-hHf"/>
+                            <constraint firstItem="2Bz-Kx-Ecv" firstAttribute="top" secondItem="BoZ-Yi-biN" secondAttribute="bottom" id="DCK-cF-sGm"/>
+                            <constraint firstItem="WrE-x1-m2C" firstAttribute="bottom" secondItem="2Bz-Kx-Ecv" secondAttribute="bottom" constant="20" id="NXA-Nw-0Gr"/>
+                            <constraint firstItem="BoZ-Yi-biN" firstAttribute="top" secondItem="WrE-x1-m2C" secondAttribute="top" constant="20" id="asD-E5-nSF"/>
+                            <constraint firstItem="BoZ-Yi-biN" firstAttribute="leading" secondItem="WrE-x1-m2C" secondAttribute="leading" constant="20" id="meX-FV-aoW"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="쇼핑" id="VMB-4t-g9h"/>
+                    <connections>
+                        <outlet property="searchButton" destination="cln-XE-ycN" id="JPP-hc-jQw"/>
+                        <outlet property="searchTextField" destination="fsW-xF-qks" id="wRj-ZK-yu8"/>
+                        <outlet property="searchView" destination="BoZ-Yi-biN" id="Ayc-8g-zTn"/>
+                        <outlet property="tableView" destination="2Bz-Kx-Ecv" id="WxK-Sf-BpW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rwd-ar-SJI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4420.6106870229005" y="350"/>
         </scene>
     </scenes>
     <resources>
@@ -280,8 +407,14 @@
         <image name="lanyardcard.fill" catalog="system" width="108" height="128"/>
         <image name="moon.fill" catalog="system" width="128" height="123"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
